--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <p><a href = "https://github.com/sabrinacodipilly/tripplanner" target="_blank"><img class = "githubrepository" src = "images/github.png" alt = "Gihub logo"></a></p>
         </div>
       </div>
-      <video id = "tripplannervid" width="527.96" height="335" frameborder="0" controls><source src="videos/trip-planner-vid.mp4" type="video/mp4">Failed to load video.</video>
+      <video id = "tripplannervid" width="527.96" frameborder="0" controls><source src="videos/trip-planner-vid.mp4" type="video/mp4">Failed to load video.</video>
     </div>
     <div class = "socialnetworkproject">
       <div class = "projectlineup">
